Добавление ссылки на профиль
Добавлен код на мой профиль в Цифровом университете АлтГУ

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<body>
 	<h1>Латкина Елизавета Алексеевна</h1>
 	<p>Штирлицу за шиворот упала гусеница. "Где-то взорвался танк", - подумал Штирлиц.</p>
+		<a href="https://portal.edu.asu.ru/user/profile.php?id=34785">Ссылка на мой профиль</a>
 	</body>
 </html>
