--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<h1>Латкина Елизавета Алексеевна</h1>
 	<p>Штирлицу за шиворот упала гусеница. "Где-то взорвался танк", - подумал Штирлиц.</p>
 		<a href="https://portal.edu.asu.ru/user/profile.php?id=34785">Ссылка на мой профиль</a>
+		<img src="https://old.bigenc.ru/media/2018/01/30/1235931534/36359.jpg">
 	</body>
 </html>
